# cargo-deps-list

./: .woodpecker.yml  Cargo.toml  README.md
src/: main.rs
tests/: integration.rs
